Fixata scrollbar

--- a/css/ecosystem.css
+++ b/css/ecosystem.css
@@ -21,14 +21,21 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--ecosystem-background);
+  /* width: 100%; */
+  background: var(--ecosystem-background);
+  overflow-x: hidden;
 }
 
-/* body img {
-  height: auto;
-  max-width: 100%;
+.ecosystem-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 20px; */
+  width: 100%;
+  height: 100%;
+
 }
- */
+
 .ecosystem {
   padding-top: 60px;
   padding-left: 16px;
@@ -87,9 +94,8 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  /* width: 1152px; */
-  /* height: 417.19px; */
-  background-color: var(--ecosystem-card-bg-color);
+  width: 100%;
+  background: var(--ecosystem-card-bg-color);
   margin-top: 48px;
   padding: 48px 24px 24px;
   border-radius: 24px;
@@ -123,9 +129,7 @@ body {
 .articles-container {
   display: flex;
   align-items: center;
-  
   vertical-align: baseline;
-  /* justify-content: space-between; */
   gap: 24px;
 }
 
@@ -142,13 +146,10 @@ body {
   flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
-  /* width: 1152px; */
-  /* height: 417.19px; */
-  background-color: var(--ecosystem-card-bg-color);
+  background: var(--ecosystem-card-bg-color);
   margin-top: 48px;
   padding: 48px 24px 24px;
   border-radius: 24px;
-  /* gap: 32px; */
 }
 
 .earn-img {
@@ -162,13 +163,11 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  /* width: 1152px; */
-  /* height: 417.19px; */
-  background-color: var(--ecosystem-card-bg-color);
+  background: var(--ecosystem-card-bg-color);
   margin-top: 48px;
   padding: 48px 24px 24px;
   border-radius: 24px;
-  /* gap: 32px; */
+  width: 100%;
 }
 
 .game-nft-img {
@@ -232,7 +231,6 @@ h4 {
   width: 108px;
   height: 108px;
   opacity: 0;
-  /* display: none; */
 }
 
 article:hover {
@@ -256,6 +254,7 @@ article:hover .img-hover {
   opacity: 100%;
   transition: opacity 0.25s ease-in-out 0s;
 }
+
 
 @media screen and (max-width: 1200px){
   .articles-container {
@@ -281,6 +280,7 @@ article:hover .img-hover {
 
 }
 
+
 @media screen and (max-width: 851px){
   .articles-container {
     flex-wrap: wrap;
@@ -291,6 +291,9 @@ article:hover .img-hover {
 
   section {
     width: 100%;
+  }
+  .earn-container {
+    flex-direction: row;
   }
 
   .caption {
@@ -304,7 +307,6 @@ article:hover .img-hover {
   }
 
   article {
-    /* width: 183px; */
     height: auto;
     flex-basis: calc(33.3% - 48px);
   }
@@ -317,7 +319,7 @@ article:hover .img-hover {
   .earn-container{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
   }
   .nft-container{
     display: flex;
@@ -326,6 +328,8 @@ article:hover .img-hover {
   }
 
 }
+
+
 @media screen and (max-width: 368px){
   .articles-container {
     flex-wrap: wrap;
@@ -343,9 +347,7 @@ article:hover .img-hover {
     flex-wrap: wrap;
   }
 
-
   article {
-    /* width: 183px; */
     height: auto;
     flex-basis: calc(50% - 24px);
     padding: 4px;
@@ -359,7 +361,7 @@ article:hover .img-hover {
   .earn-container{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
   }
   .nft-container{
     display: flex;
